--- a/src/main/resources/html/RequestView.html
+++ b/src/main/resources/html/RequestView.html
@@ -18,9 +18,8 @@
 		<div class="row">
 			<div id='container'></div>
 		</div>
-		<br>
-		<div class="row">
-			<div class="col-md-12">
+		<div class="row mt-1">
+			<div class="col-12">
 				<div class="input-group">
 					<textarea type="text" id="ae-json" class="form-control"
 					placeholder="AE-JSON"></textarea>
@@ -30,13 +29,16 @@
 				</div>
 				<!-- /input-group -->
 			</div>
-			<br>
-			<div class="col-md-12">
+		</div>
+		<div class="row mt-4">
+			<div class="col-12">
 				<button type="button" name="button" class="btn btn-primary" onclick="testOnSaveData()">saveData</button>
 				<button type="button" name="button" class="btn btn-primary" onclick="testOnLoadData()">loadData</button>
 				<button type="button" name="button" class="btn btn-primary" onclick="testGet()">testGet</button>
 				<button type="button" name="button" class="btn btn-primary" onclick="testPost()">testPost</button>
+				<button type="button" name="button" class="btn btn-primary" onclick="testLogin()">testLogin</button>
 			</div>
+		</div>
 		</div>
 	</div>
 </body>
