--- a/src/main/resources/html/NetCapture.html
+++ b/src/main/resources/html/NetCapture.html
@@ -6,15 +6,13 @@
 <title>NetCapture</title>
 <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bodymovin/4.5.8/bodymovin.js"></script>
-<link href="https://cdn.bootcss.com/tether/1.4.0/css/tether.min.css"
-	rel="stylesheet">
+<link href="https://cdn.bootcss.com/tether/1.4.0/css/tether.min.css" rel="stylesheet">
 <script src="https://cdn.bootcss.com/tether/1.4.0/js/tether.min.js"></script>
-<link
-	href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-	rel="stylesheet">
-<script
-	src="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+<link href="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 <script src="https://cdn.wilddog.com/sdk/js/2.3.10/wilddog.js"></script>
+<script src="../js/Client.js" charset="utf-8"></script>
+<script src="../js/NetCapture.js" charset="utf-8"></script>
 </head>
 <body>
 	<div class="container">
@@ -32,6 +30,19 @@
 					</span>
 				</div>
 				<!-- /input-group -->
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-12">
+				<button type="button" name="button" class="btn btn-primary" onclick="testGetDevs()">testGetDevs</button>
+				<button type="button" name="button" class="btn btn-primary" onclick="testRegisterCaptureCallback()">testRegisterCaptureCallback</button>
+				<button type="button" name="button" class="btn btn-primary" onclick="testStartCapture()">testStartCapture</button>
+				<button type="button" name="button" class="btn btn-primary" onclick="testStopCapture()">testStopCapture</button>
+			</div>
+		</div>
+		<div class="row mt-4">
+			<div class="col-12">
+				<pre id="response"></pre>
 			</div>
 		</div>
 	</div>
